css/styles.css
/* CSS may need to cleaned up/split */
@charset "UTF-8";
/* Body */
body {
	font-family: source-sans-pro, consolas;
	background-color: #f2f2f2;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	font-style: normal;
	font-weight: 200;
}
/* Container */
.container {
	width: 90%;
	margin-left: auto;
	margin-right: auto;
	height: 1000px;
	background-color: #FFFFFF;
}
/* Navigation */
header {
	width: 100%;
	height: 7%;
	background-color: #52bad5;
	border-bottom: 1px solid #2C9AB7;
}
.logo {
	color: #fff;
	font-weight: bold;
	text-align: undefined;
	width:10%;
	float: left;
	margin-top: 10px;
	margin-bottom: 0px;
	margin-left: 25px;
	letter-spacing: 4px;
}
nav {
	float: right;
	width: 80%;
	text-align: right;
	margin-right: 25px;
}
header nav ul {
	list-style: none;
	float: right;
}
nav ul li {
	float: left;
	color: #FFFFFF;
	font-size: 20px;
	text-align: left;
	margin-right: 25px;
	letter-spacing: 2px;
	font-weight: bold;
	transition: all 0.3s linear;
}
ul li a {
	color: #FFFFFF;
	text-decoration: none;
	
}
ul li:hover a {
	color: #2C9AB7;
}
.hero_header {
	color: #FFFFFF;
	text-align: center;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	letter-spacing: 4px;
}
a:link, a:visited{
	text-decoration: none;
}
/* Hero Section */
.hero {
	width: 100%;
	background-image:url(../images/Walter_Pyramid.jpg);
	background-repeat: no-repeat;
	background-position:center center;
	background-size:cover;
	background-color: #B3B3B3;
	padding-top: 200px;
	padding-bottom: 200px;
	float: right;
}
.light {
	font-weight: bold;
	color: #717070;
}
.tagline {
	text-align: center;
	color: #FFFFFF;
	margin-top: 4px;
	font-weight: lighter;
	text-transform: uppercase;
	letter-spacing: 1px;
}
/* About Section */
.text_column {
	width: 29%;
	text-align: justify;
	font-weight: lighter;
	line-height: 25px;
	float: left;
	padding-left: 20px;
	padding-right: 20px;
	color: #A3A3A3;
}
.about {
	padding-left: 25px;
	padding-right: 25px;
	padding-top: 35px;
	padding-bottom: 25px;
	display: inline-block;
	background-color: #FFFFFF;
}
/* Gallery */
.entry-title {
	color: #FFFFFF;
	text-align: left;
	font-weight: bold;
	letter-spacing: 1px;
	margin-left: 25px;
	margin-bottom:10px;
	display: inline-block;
	line-height: normal;
	vertical-align: middle;
}
.entry-banner {
	background-color: #2D9AB7;
	width:100%;
	height: 7%;
	float: left;
	padding-bottom:0px;
	padding-top:0px;
}
.mugshot {
	width: 50%;	
}
.icon {
	margin-bottom: 5px;
}
.contact {
	width: 100px;
}
.gallery {
	clear: both;
	display: inline-block;
	width: 100%;
	background-color: #FFFFFF;
	/* [disabled]min-width: 400px;
*/
	padding-bottom: 35px;
	padding-top: 0px;
	margin-top: -5px;
	margin-bottom: 0px;
}
.thumbnail {
	width: 23%;
	text-align: center;
	float: left;
	margin-top: 35px;
}
.gallery .thumbnail h4 {
	margin-top: 5px;
	margin-right: 5px;
	margin-bottom: 5px;
	margin-left: 5px;
	color: #52BAD5;
}
.gallery .thumbnail p {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	color: #A3A3A3;
}
.wrap {
	float: right;
	width: 50%;
	height: 340px;
	overflow: hidden;
	padding-top: 10px;
	padding-right: 10px;
}
.form {
	width: 100%;
	height: 200%;
	overflow: hidden;
}
/* Parallax Section */
.banner {

}
.parallax_left {
    width: 60%;
    height: 300px;
    background: #2D9AB7;
    float: left;
	position: relative;
}
.parallax_left img {
	max-height: 100%;  
    max-width: 100%; 
    width: auto;
    height: auto;
    position: absolute;  
    top: 0;  
    bottom: 0;  
    left: 0;  
    right: 0;  
    margin: auto;
}
.parallax_right {
    margin-left: 60%;
    height: 300px;
    background: #2D9AB7;
	position:relative;
}
.parallax_right:before {
    content: '';
    position: absolute;
    top: 0;
	right: 0;
    border-top: 80px solid white;
    border-left: 80px solid #2D9AB7;
    width: 0;
}
.parallax {
	color: #FFFFFF;
	text-align: right;
	padding-right: 40%;
	padding-top: 50px;
	letter-spacing: 2px;
	margin-top: 0px;
	position: relative;
}
.parallax_description {
	color: #FFFFFF;
	text-align: justify;
	width: 70%;
	font-weight: lighter;
	line-height: 23px;
	margin-top: 0px;
	margin-right: auto;
	margin-bottom: 0px;
	margin-left: auto;
}
.parallax_description a:link {
	color:#FFFFFF;
	text-decoration: none;
}
.parallax_description a:visited {
	color:#FFFFFF;
	text-decoration: none;
}
/* More info */
footer {
	background-color: #FFFFFF;
	padding-bottom: 35px;
}
.footer_column {
	width: 50%;
	text-align: center;
	padding-top: 30px;
	float: left;
}
footer .footer_column h3 {
	color: #B3B3B3;
	text-align: center;
}
footer .footer_column p {
	color: #717070;
	background-color: #FFFFFF;
}
.cards {
	width: 100%;
	height: auto;
	max-width: 400px;
	max-height: 200px;
}
footer .footer_column p {
	padding-left: 30px;
	padding-right: 30px;
	text-align: justify;
	line-height: 25px;
	font-weight: lighter;
	margin-left: 20px;
	margin-right: 20px;
}
.footer_column a:link {
	color: #717070;
	text-decoration: none;
}
.footer_column a:visited {
	color: #717070;
	text-decoration: none;
}
.button {
	width: 200px;
	margin-top: 40px;
	margin-right: auto;
	margin-bottom: auto;
	margin-left: auto;
	padding-top: 20px;
	padding-right: 10px;
	padding-bottom: 20px;
	padding-left: 10px;
	text-align: center;
	vertical-align: middle;
	border-radius: 0px;
	text-transform: uppercase;
	font-weight: bold;
	letter-spacing: 2px;
	border: 3px solid #FFFFFF;
	color: #FFFFFF;
	transition: all 0.3s linear;
}
.button:hover {
	background-color: #FEFEFE;
	color: #C4C4C4;
	cursor: pointer;	
}
.facebook {
	width: 100px;
	margin-top: 20px;
	margin-right: auto;
	margin-bottom: auto;
	margin-left: auto;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	vertical-align: middle;
	border-radius: 0px;
	border: 0px;
	transition: all 0.3s linear;
}
.facebook:hover {
	background-color: #FEFEFE;
	color: #C4C4C4;
	cursor: pointer;	
}
.copyright {
	text-align: center;
	padding-top: 20px;
	padding-bottom: 20px;
	background-color: #717070;
	color: #FFFFFF;
	text-transform: uppercase;
	font-weight: lighter;
	letter-spacing: 2px;
	border-top-width: 2px;
}
.footer_banner {
	background-color: #B3B3B3;
	padding-top: 60px;
	padding-bottom: 60PX;
	margin-bottom: 0px;
}
footer {
	display: inline-block;
}
.hidden {
	display: none;
}
.flyer {
	width: 100%;
}

/* --------------Mobile--------------*/
@media (max-width: 320px) {
.logo {
	width: 100%;
	text-align: center;
	margin-top: 13px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
}
.container header nav {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	float: hidden;
	overflow: auto;
	display: inline-block;
	background: #52bad5;
}
header nav ul {
}
nav ul li {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	text-align: center;
	padding-top: 8px;
	padding-bottom: 8px;
}
.text_column {
	width: 100%;
	text-align: justify;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}
.thumbnail {
	width: 100%;
}
.footer_column {
	width: 100%;
	margin-top: 0px;
}
.parallax {
	text-align: center;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: px;
	padding-top: 40%;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	width: 100%;
	font-size: 18px;
}
.parallax_description {
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
	width: 90%;
	margin-top: 25px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 12px;
	float: none;
	text-align: justify;
}
.parallax_left {
 	display: none;
}
.parallax_right {
    margin-left: 0%;
}
.tagline {
	margin-top: 20px;
	line-height: 22px;
}
.hero_header {
	padding-left: 10px;
	padding-right: 10px;
	line-height: 22px;
	text-align: center;
}
.wrap {
	width: 100%;
	height: 330px;
	padding: 0;
	overflow: hidden;
}
.form {
	width: 110%;
	height: 700px;
	margin-left: 9%;
	
	/* Content of google form made to scale */
	-ms-zoom: 0.75;
	-moz-transform: scale(0.75);
	-moz-transform-origin: 0 0;
    -o-transform: scale(0.75);
    -o-transform-origin: 0 0;
    -webkit-transform: scale(0.75);
    -webkit-transform-origin: 0 0;
}
}

/* --------------Small Tablets-------------- */
@media (min-width: 321px)and (max-width: 868px) {
.logo {
	width: 100%;
	text-align: center;
	margin-top: 13px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	color: #043745;
}
.container header nav {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	float: hidden;
	overflow: auto;
	display: inline-block;
	background: #52bad5;
}
header nav ul {
	padding: 0px;
	float: none;
}
nav ul li {
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	width: 100%;
	text-align: center;
	padding-top: 8px;
	padding-bottom: 8px;
}
.text_column {
	width: 100%;
	text-align: left;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}
.thumbnail {
	width: 100%;
}
.footer_column {
	width: 100%;
	margin-top: 0px;
}
.parallax_left {
 	display: none;
}
.parallax_right {
    margin-left: 0%;
}
.thumbnail {
	width: 50%;
}
.wrap {
	width: 100%;
	height: 270px;
	padding: 0;
	overflow: hidden;
}
.form {
	width: 110%;
	height: 700px;
	margin-left: 9%;
	
	/* Content of google form made to scale */
	-ms-zoom: 0.75;
	-moz-transform: scale(0.75);
	-moz-transform-origin: 0 0;
    -o-transform: scale(0.75);
    -o-transform-origin: 0 0;
    -webkit-transform: scale(0.75);
    -webkit-transform-origin: 0 0;
}
.footer_column {
	width: 100%;
}
}

/* -------------Small Desktops------------- */
@media (min-width: 868px) and (max-width: 1096px) {
.text_column {
	width: 100%;
}
.thumbnail {
	width: 50%;
}
.text_column {
	width: 100%;
	margin-top: 0px;
	margin-right: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	padding-top: 0px;
	padding-right: 0px;
	padding-bottom: 0px;
	padding-left: 0px;
}
.wrap {
	width: 100%;
	height: 270px;
	padding: 0;
	overflow: hidden;
}
.form {
	width: 110%;
	height: 700px;
	margin-left: 9%;
	
	/* Content of google form made to scale */
	-ms-zoom: 0.75;
	-moz-transform: scale(0.75);
	-moz-transform-origin: 0 0;
    -o-transform: scale(0.75);
    -o-transform-origin: 0 0;
    -webkit-transform: scale(0.75);
    -webkit-transform-origin: 0 0;
}
}

/* -------------Largest Desktops------------- */
@media (min-width: 1300px) {

}

